--- a/static/index.css
+++ b/static/index.css
@@ -1361,14 +1361,14 @@ body.modal-open {
 }
 
 
-.people-wrapper {
+.countries-wrapper {
   display: flex;
   position: relative;
   overflow: hidden;
   width: 100%;
 }
 
-.slide-people-grid-1 {
+.slide-countries-grid-1 {
   width: 100%;
   margin-right: 1%;
   padding: 15px;
@@ -1381,7 +1381,7 @@ body.modal-open {
 }
 
 
-.slide-people-grid-2 {
+.slide-countries-grid-2 {
   width: 100%;
   margin-right: 1%;
   padding: 15px;
@@ -1393,7 +1393,7 @@ body.modal-open {
   transition: transform 0.5s ease;
 }
 
-.slide-people-grid-3 {
+.slide-countries-grid-3 {
   width: 100%;
   margin-right: 1%;
   padding: 15px;
@@ -1405,36 +1405,99 @@ body.modal-open {
   transition: transform 0.5s ease;
 }
 
-.people-next-button {
+.countries-next-button {
   display: flex;
   align-items: center;
-  width: 5px;
-  padding: 20px;
   margin-left: 20px;
-  border-radius: 10px;
   border: 0;
-  background-color: rgb(141, 141, 141);
-  letter-spacing: 1.5px;
-  font-size: 15px;
   transition: all 0.3s ease;
-  box-shadow: rgb(118, 118, 118) 0px 7px 0px 0px;
-  color: hsl(0, 0%, 100%);
   cursor: pointer;
+  border-left: 25px solid rgb(33, 33, 33);
+  border-right: 5px solid transparent;
+  border-top: 50px solid transparent;
+  border-bottom: 50px solid transparent;
+  filter: drop-shadow(1px 1px 1px black);
 }
 
 
-.people-next-button:hover {
-  box-shadow: rgb(89, 89, 89) 0px 4px 0px 0px;
+.countries-next-button:hover {
+  filter: drop-shadow(2px 2px 2px black);
 }
 
 
-.people-next-button:active {
-  background-color: rgb(73, 73, 73);
-  /*50, 168, 80*/
-  transform: translateY(5px);
-  transition: 200ms;
+.countries-next-button:active {
+
 }
- 
+
+.companies-wrapper {
+  display: flex;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.slide-companies-grid-1 {
+  width: 100%;
+  margin-right: 1%;
+  padding: 15px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);  /* 3열 그리드 */
+  flex-shrink: 0;
+  gap: 20px;
+  box-sizing: border-box;
+  transition: transform 0.5s ease;
+}
+
+
+.slide-companies-grid-2 {
+  width: 100%;
+  margin-right: 1%;
+  padding: 15px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);  /* 3열 그리드 */
+  flex-shrink: 0;
+  gap: 20px;
+  box-sizing: border-box;
+  transition: transform 0.5s ease;
+}
+
+.slide-companies-grid-3 {
+  width: 100%;
+  margin-right: 1%;
+  padding: 15px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);  /* 3열 그리드 */
+  flex-shrink: 0;
+  gap: 20px;
+  box-sizing: border-box;
+  transition: transform 0.5s ease;
+}
+
+.companies-next-button {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  border: 0;
+  transition: all 0.1s ease;
+  cursor: pointer;
+  border-left: 25px solid rgb(33, 33, 33);
+  border-right: 5px solid transparent;
+  border-top: 50px solid transparent;
+  border-bottom: 50px solid transparent;
+  filter: drop-shadow(1px 1px 1px black);
+}
+
+
+.companies-next-button:hover {
+  filter: drop-shadow(2px 2px 2px black);
+}
+
+
+.companies-next-button:active {
+  filter: drop-shadow(0px 0px 0px black);
+  border-left: 25px solid rgb(42, 42, 42);
+}
+
 .home-text39 {
 
   overflow: hidden;
@@ -1706,6 +1769,20 @@ body.modal-open {
   flex-direction: column;
   background-color: var(--dl-color-gray-900);
 }
+
+.home-top-companies {
+  width: 100%;
+  display: flex;
+  max-width: var(--dl-layout-size-maxcontent);
+  margin-top: var(--dl-layout-space-fiveunits);
+  align-items: center;
+  padding-top: var(--dl-layout-space-tenunits);
+  padding-left: var(--dl-layout-space-tripleunit);
+  margin-bottom: var(--dl-layout-space-fiveunits);
+  padding-right: var(--dl-layout-space-tripleunit);
+  flex-direction: column;
+  padding-bottom: var(--dl-layout-space-fiveunits);
+}
  
 .home-top-countries {
   width: 100%;
@@ -1907,7 +1984,20 @@ body.modal-open {
   background-color: var(--dl-color-gray-900);
 }
  
-.home-top-people {
+.home-top-countries {
+  width: 100%;
+  display: flex;
+  max-width: var(--dl-layout-size-maxcontent);
+  margin-top: var(--dl-layout-space-fiveunits);
+  align-items: center;
+  padding-top: var(--dl-layout-space-tenunits);
+  margin-bottom: var(--dl-layout-space-fiveunits);
+  padding-right: 1px;
+  flex-direction: column;
+  padding-bottom: var(--dl-layout-space-fiveunits);
+}
+
+.home-top-companies {
   width: 100%;
   display: flex;
   max-width: var(--dl-layout-size-maxcontent);
@@ -2114,6 +2204,7 @@ body.modal-open {
   padding-bottom: var(--dl-layout-space-doubleunit);
   justify-content: flex-start;
   background-color: #efefef;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 10px 0px -12px inset, rgba(0, 0, 0, 0.3) 0px 15px 33px -18px inset;
 }
  
 .home-container17 {
@@ -2911,7 +3002,7 @@ body.modal-open {
   .home-service-card3 {
     width: 100%;
   }
-  .home-top-people {
+  .home-top-countries {
     padding-top: var(--dl-layout-space-fiveunits);
     padding-bottom: var(--dl-layout-space-fiveunits);
   }
