--- a/templates/index.html
+++ b/templates/index.html
@@ -167,7 +167,7 @@
                         <div class="home-right-side">
                         {% if user %}
                             <div class="user-info">
-                                <p style="white-space: nowrap; margin-right: 5%;">{{ user['email'] }}으로 로그인됨</p>
+                                <p style="white-space: nowrap; margin-right: 5%;">Logged In: {{ user['email'] }}</p>
                                 <img src="{{ user['picture'] }}" alt="profile" width="40" height="40">
                             </div>
                             <button onclick="window.location.href='/logout'" class="home-cta-btn10 Anchor button">Log Out</button>
@@ -1562,7 +1562,7 @@
                             <h4>Github</h4>
                         </div>
                         <div class="home-copyright-container">
-                            <span class="Anchor">GETS, Copyright, 2025</span>
+                            <span class="Anchor">© 2025. gets. all rights reserved.</span>
                         </div>
                     </div>
                 </div>
